--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-out/
+it0/
+it1/
+#out/
 build/
 develop-eggs/
 dist/
@@ -16,7 +18,7 @@ downloads/
 eggs/
 .eggs/
 lib/
-lib64/
+lib64/z
 parts/
 sdist/
 var/
